[gd_scene load_steps=26 format=3 uid="uid://brjwhneobow0w"]

[ext_resource type="Script" uid="uid://ddig76ri34hs" path="res://entities/enemies/orc/orc.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://cam80mpl2fg2w" path="res://Characters(100x100)/Orc/Orc/Orc-Idle.png" id="2_idle"]
[ext_resource type="Texture2D" uid="uid://css1gmlrp384j" path="res://Characters(100x100)/Orc/Orc/Shadow sprites/Orc-shadow_attack02.png" id="2_shadow"]
[ext_resource type="Texture2D" uid="uid://dpvmxqjdg2wyx" path="res://Characters(100x100)/Orc/Orc/Orc-Walk.png" id="3_walk"]
[ext_resource type="Texture2D" uid="uid://clca3lelhsvio" path="res://Characters(100x100)/Orc/Orc/Orc-Attack01.png" id="4_attack"]
[ext_resource type="Script" uid="uid://bu6t6tsx2j1oe" path="res://components/fsm/state_machine.gd" id="5_fsm"]
[ext_resource type="Texture2D" uid="uid://cp0ssvevi03wa" path="res://Characters(100x100)/Orc/Orc/Orc-Hurt.png" id="5_hurt"]
[ext_resource type="Texture2D" uid="uid://d13wi5tk4dqrl" path="res://Characters(100x100)/Orc/Orc/Orc-Death.png" id="6_death"]
[ext_resource type="Script" uid="uid://d12ha6kfx7kcp" path="res://entities/enemies/orc/states/orc_idle.gd" id="6_idle_state"]
[ext_resource type="Script" uid="uid://bnummtb68hh62" path="res://entities/enemies/orc/states/orc_chase.gd" id="7_chase_state"]
[ext_resource type="Script" uid="uid://bn65kh23rlcno" path="res://entities/enemies/orc/states/orc_attack.gd" id="8_attack_state"]
[ext_resource type="Script" uid="uid://dvhhe0babl3dv" path="res://entities/enemies/orc/states/orc_hurt.gd" id="9_hurt_state"]
[ext_resource type="Script" uid="uid://bqvnypd6bqq1q" path="res://components/velocity_component.gd" id="9_velocity"]
[ext_resource type="Script" uid="uid://3t5dstymh2ug" path="res://components/health_component.gd" id="10_health"]
[ext_resource type="Script" uid="uid://b1dkfeve2wwjp" path="res://components/hurtbox_component.gd" id="11_hurtbox"]
[ext_resource type="Script" uid="uid://btwq2nra7385y" path="res://components/hitbox_component.gd" id="12_hitbox"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_orc"]
radius = 7.0
height = 18.0

[sub_resource type="Animation" id="Animation_attack"]
resource_name = "attack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_attack")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitboxComponent/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_death"]
resource_name = "death"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_death")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_hurt"]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_hurt")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_idle"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_idle")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_walk"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_walk")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_orc"]
_data = {
&"attack": SubResource("Animation_attack"),
&"death": SubResource("Animation_death"),
&"hurt": SubResource("Animation_hurt"),
&"idle": SubResource("Animation_idle"),
&"walk": SubResource("Animation_walk")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hurtbox"]
radius = 8.0
height = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hitbox"]
radius = 15.0

[node name="Orc" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 5
script = ExtResource("1_script")

[node name="ShadowSprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 1)
texture = ExtResource("2_shadow")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("4_attack")
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_orc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_orc")
}

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("5_fsm")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("6_idle_state")

[node name="Chase" type="Node" parent="StateMachine"]
script = ExtResource("7_chase_state")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("8_attack_state")

[node name="Hurt" type="Node" parent="StateMachine"]
script = ExtResource("9_hurt_state")

[node name="VelocityComponent" type="Node" parent="."]
script = ExtResource("9_velocity")
max_speed = 60.0

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("10_health")
max_health = 30.0

[node name="HurtboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component", "velocity_component")]
script = ExtResource("11_hurtbox")
health_component = NodePath("../HealthComponent")
velocity_component = NodePath("../VelocityComponent")
team = "enemy"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("CapsuleShape2D_hurtbox")
debug_color = Color(0.960784, 0, 0.517647, 0.419608)

[node name="HitboxComponent" type="Area2D" parent="."]
script = ExtResource("12_hitbox")
damage = 5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(10, 0)
shape = SubResource("CircleShape2D_hitbox")
disabled = true
debug_color = Color(0.701961, 0, 0.0313726, 0.419608)
